Correct percentages when searching text inside files

Solve some problems showing percentages when the contents of a big symlinked
file were read because then the variable `totalBytes` was very small (it was
the size of a symlink) but much more bytes bytes were read. That caused huge
unreal percentages and sometimes negative values.

FIXED: [ 419547 ] Krusader shows negative percent values while searching the text with the excepted folder
BUG: 419547

Revision: https://invent.kde.org/utilities/krusader/-/merge_requests/71